--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -8,7 +8,7 @@
   <script>
     let map;
 
-    const initMap = () => {
+    function initMap() {
       map = new google.maps.Map(document.getElementById('map'), {
         center: { lat: -36.2128949, lng: 113.7075864 },
         zoom: 4
